[workspace]
members = ["chat-test","chrono-im", "crates/*", "relay-server"]
resolver = "2"

[workspace.dependencies]
axum = "0.8.1"
async-trait = "0.1.80"
chrono = "0.4.38"
futures = "0.3.30"
libp2p = "0.53.2"
once_cell = "1.19.0"
serde = "1.0.203"
serde_json = "1.0.117"
tiny-bip39 = "2"
tokio = "1"
tower-http = "0.6.2"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
sqlx = "0.8.3"
thiserror = "2.0.9"
lettre = "0.11.7"
image = "0.25.1"
identicon-rs = "6.0.1"
rand = "0.8.5"
base64 = "0.22.1"
calamine = "0.26.1"
bytes = "1.6.0"
bs58 = "0.5.1"
tokio-util = "0.7.11"
crc64fast = "1.1.0"
jsonwebtoken = "9.3.0"
prost = "0.13.4"
sha2 = "0.10.8"
ethers = "2.0.14"
dirs = "5.0.1"

models = { path = "crates/models" }
middleware = { path = "crates/middleware" }
error = { path = 'crates/error' }
send_email = { path = "crates/send_email" }
nickname = { path = "crates/nickname" }
avatar = { path = "crates/avatar" }
channel = { path = "crates/channel" }
swarm = { path = "crates/swarm" }
chat = { path = "crates/chat" }
macros = { path = "crates/macros" }
gossipsub_sync = { path = "crates/gossipsub_sync" }
init_behaviour = { path = "crates/init_behaviour" }
censor = { path = "crates/censor" }
