[package]
name = "chrono-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { workspace = true, features = ["csr"] }
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
serde = { workspace = true, features = ["derive"] }
serde-wasm-bindgen.workspace = true
console_error_panic_hook.workspace = true
views.workspace = true

[workspace]
members = [ "crates/*","src-tauri"]

[workspace.dependencies]
leptos = { version = "0.7" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde = { version = "1" }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
views = { path = "crates/views" }
display_enum = "0.1.5"
tiny-bip39 = "2.0.0"
kit = { path = "crates/kit" }
