[package]
name = "gossipsub_sync"
version = "0.1.0"
edition = "2021"

[dependencies]
serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }
libp2p = { workspace = true, features = [ "tokio",  "noise", "macros", "tcp", "yamux", "quic", "autonat", "dcutr", "ping", "identify", "kad", "dns", "relay", "request-response"] }
