[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

[dependencies]
axum.workspace = true
tokio.workspace = true
tracing.workspace = true
once_cell.workspace = true
error.workspace = true
serde = { workspace = true, features = ["derive"] }
jsonwebtoken.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
prost.workspace = true

[dev-dependencies]
tokio = {workspace = true, features = ["full"]}