[package]
name = "swarm"
version = "0.1.0"
edition = "2021"

[dependencies]
error.workspace = true
tokio = { workspace = true, features = ["full"] }
models.workspace = true
futures.workspace = true
tracing.workspace = true
channel.workspace = true
once_cell.workspace = true
middleware.workspace = true
serde_json.workspace = true
async-trait.workspace = true
libp2p = { workspace = true, features = [ "tokio",  "noise", "macros", "tcp", "yamux", "quic", "autonat", "dcutr", "ping",  "identify", "kad", "relay", "gossipsub", "request-response", "dns"] }
serde = { workspace = true, features = ["derive"] }
chat.workspace = true
macros.workspace = true
init_behaviour.workspace = true

