[package]
name = "wasm_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error.workspace = true
serde = { workspace = true, features = ["derive"] }
leptos.workspace = true
gloo-net = { workspace = true, features = ["json"] }
configs.workspace = true
storage.workspace = true